message(STATUS "")
message(STATUS "emc_hw                         Description                    Value")
message(STATUS "------------------------------ ------------------------------ -----")
message(STATUS "[EMC_HW_PORT_INLINE_MMIO] .... Inline Memory Mapped IO ...... <${EMC_HW_PORT_INLINE_MMIO}>")
message(STATUS "[EMC_HW_PORT_VTBL_MMIO] ...... VTBL based Memory Mapped IO .. <${EMC_HW_PORT_VTBL_MMIO}>")
message(STATUS "[EMC_HW_PORT_READ_HOOK] ...... Call hook after read ......... <${EMC_HW_PORT_READ_HOOK}>")
message(STATUS "[EMC_HW_PORT_WRITE_HOOK] ..... Call hook before write ....... <${EMC_HW_PORT_WRITE_HOOK}>")
message(STATUS "[EMC_HW_PHYSICAL_ADDRESS_MAP]  Phys/Virtual Address Mapping . <${EMC_HW_PHYSICAL_ADDRESS_MAP}>")
message(STATUS "")
message(STATUS "[EMC_MEMORY_POOL_TYPE_XTOS] ............................... <${EMC_MEMORY_POOL_TYPE_XTOS}>")
message(STATUS "[EMC_MEMORY_POOL_TYPE_TLSF] ............................... <${EMC_MEMORY_POOL_TYPE_TLSF}>")
message(STATUS "[EMC_MEMORY_POOL_TYPE_MALLOC] ............................. <${EMC_MEMORY_POOL_TYPE_MALLOC}>")
message(STATUS "[EMC_MEMORY_POOL_TYPE_STATIC] ............................. <${EMC_MEMORY_POOL_TYPE_STATIC}>")
message(STATUS "[EMC_MEMORY_POOL_TYPE_UNCACHED] ........................... <${EMC_MEMORY_POOL_TYPE_UNCACHED}>")
if (EMC_MEMORY_POOL_TYPE_STATIC)
  message(STATUS "[EMC_MEMORY_POOL_TYPE_STATIC_INSTANCES]  Number Instances . <${EMC_MEMORY_POOL_TYPE_STATIC_INSTANCES}>")
endif()
message(STATUS "")

configure_file(eme/cmakeConfigure.h.in cmakeConfigure.h)

add_subdirectory(src)
