message(STATUS "")
message(STATUS "emcpp_system_celeno_wifi                   Description                   Value")
message(STATUS "------------------------------------------ ----------------------------- -----")
message(STATUS "[EMC_USB_VENDOR_CELENO_UMAC_APP].......... APP running on UMAC.......... <${EMC_USB_VENDOR_CELENO_UMAC_APP}>")
message(STATUS "[EMC_USB_VENDOR_CELENO_UMAC_APP_ID]....... APP ID....................... <${EMC_USB_VENDOR_CELENO_UMAC_APP_ID}>")
message(STATUS "[EMC_USB_VENDOR_CELENO_UMAC_APP_VERSION].. APP version.................. <${EMC_USB_VENDOR_CELENO_UMAC_APP_VERSION}>")
message(STATUS "[EMC_USB_VENDOR_CELENO_UMAC_APP_BUILD_ID]. APP build ID................. <${EMC_USB_VENDOR_CELENO_UMAC_APP_BUILD_ID}>")
message(STATUS "[EMC_USB_VENDOR_CELENO_HAS_WIFI_FUNCTION]. Wifi function available...... <${EMC_USB_VENDOR_CELENO_HAS_WIFI_FUNCTION}>")
message(STATUS "[EMC_USB_VENDOR_CELENO_HAS_ECM_FUNCTION].. ECM function available....... <${EMC_USB_VENDOR_CELENO_HAS_ECM_FUNCTION}>")
message(STATUS "[EMC_LOG_INTERNAL_MEMORY_SIZE]............ Log memory size in bytes..... <${EMC_LOG_INTERNAL_MEMORY_SIZE}>")
message(STATUS "[EMC_LOG_INTERNAL_BUFFERED_TRANSPORT_SIZE] LiveLog buffer size in bytes. <${EMC_LOG_INTERNAL_BUFFERED_TRANSPORT_SIZE}>")

add_subdirectory(src)
configure_file(eme/cmakeConfigure.h.in cmakeConfigure.h)
