if(EMC_STD_MALLOC STREQUAL "ALTERA")
  add_subdirectory(altera)
elseif(EMC_STD_MALLOC STREQUAL "AMS")
  add_subdirectory(ams)
elseif(EMC_STD_MALLOC STREQUAL "XALLOC")
  add_subdirectory(xalloc)
elseif(EMC_STD_MALLOC STREQUAL "GKI")
  add_subdirectory(gki)
elseif(EMC_STD_MALLOC STREQUAL "SANDISK")
  add_subdirectory(sandisk)
elseif(EMC_STD_MALLOC STREQUAL "THREADX")
  add_subdirectory(threadx)
elseif(EMC_STD_MALLOC STREQUAL "m4osa")
  add_subdirectory(m4osa)
elseif(EMC_STD_MALLOC STREQUAL "rcx")
  add_subdirectory(rcx)
elseif(EMC_STD_MALLOC STREQUAL "tlsf")
  add_subdirectory(tlsf)
elseif(EMC_STD_MALLOC STREQUAL "XTOS")
  add_subdirectory(xtos)
elseif(EMC_STD_MALLOC STREQUAL "EXTERN")
  add_subdirectory(extern)
endif()

if(NOT (EMC_STD_MALLOC_HEAP_TRACE_SIZE STREQUAL "0"))
  add_subdirectory(trace)
endif()
